Detection for Linux Mint 22.2 Cinnamon OK